# lib/db/api.js
@@ -1673,6 +1673,18 @@ dbapi.unsetDeviceAssignedUser = function(serial) {
   }))
 }
 
+dbapi.setDeviceAdminOwner = function(serial, email) {
+  return db.run(r.table('devices').get(serial).update({
+    adminOwner: email
+  }))
+}
+
+dbapi.unsetDeviceAdminOwner = function(serial) {
+  return db.run(r.table('devices').get(serial).update({
+    adminOwner: null
+  }))
+}
+
 dbapi.loadDevicesByAssignedUser = function(email) {
   return db.run(r.table('devices').getAll(email, {
     index: 'assignedUser'
